# MOBA

./: .gitignore  CMakeLists debug.txt  CMakeLists.txt  README.md  max_optimisation_rebuild.sh  rebuild.sh
RuntimeData/: auth_ctos.json  game_args.json  init_game_args.json  server_init.json  test.json
assets/Characters/Naren/: Naren.glb
assets/Maps/: JonMap.glb
assets/Shaders/: fragment_shader.glsl  vertex_shader.glsl
include/Adapter/: NetAdapter.hpp
include/Assets/: GLBLoader.hpp  ModelData.hpp  ResourceManager.hpp
include/Authentication/: Auth.hpp
include/Client/: Client.hpp
include/Client/GameClient/: ClientWorld.hpp  GameClient.hpp
include/Client/GameClient/Camera/: Camera.hpp  CameraController.hpp
include/Client/GameClient/Duplication/: DuplicationSystem.hpp
include/Client/GameClient/Net/: GameArgsHandler.hpp  ServerConnectionManager.hpp
include/Client/Input/: InputEventTypes.hpp  InputManager.hpp
include/Client/Renderer/: Renderer.hpp  Shader.hpp
include/Common/Coordinates/: ScreenSpacePos.hpp  WorldSpacePos.hpp
include/Common/Math/: Math.hpp  Rect.hpp
include/Common/Memory/: BiMap.hpp  FIFOQueue.hpp  FreeListPool.hpp  HandleMap.hpp
include/Common/Player/: AccountID.hpp
include/Common/Threading/: ThreadSafeQueue.hpp
include/Core/Adapter/: NetAdapter.hpp
include/Core/EntityComponentSystem/: Archetype.hpp  ECSConfig.hpp  Entity.hpp  World.hpp
include/Core/Networking/: NetConfig.hpp  PacketManager.hpp  PeerData.hpp
include/Core/Networking/Core/: NetCommand.hpp  NetCommon.hpp  NetEvent.hpp  NetEventDistributor.hpp  Networker.hpp  PeerHandle.hpp
include/Core/Networking/Message/: NetMessage.hpp
include/Core/Networking/Packets/: AutoRegisterPacket.hpp  JSONPacket.hpp  PacketBase.hpp  PacketDistributor.hpp  PacketFactory.hpp  PacketMetadata.hpp  PacketTypes.hpp  TestPacket.hpp
include/Core/Networking/Session/: PeerDirectory.hpp
include/Debug/: debug.hpp
include/EntityComponentSystem/: Archetype.hpp  World.hpp
include/EntityComponentSystem/Components/Match/: Spawnpoint.hpp  Team.hpp
include/EntityComponentSystem/Core/: Archetype.hpp  ECSConfig.hpp  World.hpp
include/EntityComponentSystem/Systems/: ClientInputSystem.hpp  StateSnapshotSystem.hpp
include/EntityComponentSystem/Worlds/: ClientWorld.hpp  ServerWorld.hpp
include/Game/: AssetState.hpp  Game.hpp  GameClient.hpp  MapDef.hpp  ObjectState.hpp  Transform.hpp
include/Game/CharacterMap/: AssetDatabase.hpp  AssetDefinition.hpp  CharacterDatabase.hpp  CharacterDefinition.hpp
include/Game/Characters/: Character.hpp  Naren.hpp
include/Game/Components/: Transform.hpp
include/Game/Components/Match/: Spawnpoint.hpp
include/Game/Components/Navigation/: Path.hpp
include/Game/Components/Stats/: MovementSpeed.hpp
include/Game/Control/: PlayerCommand.hpp
include/Game/ECS/: Archetype.hpp  World.hpp
include/Game/ECS/Systems/: ClientCommandSystem.hpp  ClientInputSystem.hpp  StateSnapshotSystem.hpp
include/Game/Entities/: Entitiy.hpp  IEntity.hpp  Naren.hpp
include/Game/Entities/Characters/: CharacterID.hpp
include/Game/Events/: BaseEvent.hpp  CastAbilityEvent.hpp  MoveCharacterEvent.hpp
include/Game/Maps/: Map.hpp  MapFactory.hpp  MapRegisterer.hpp  SummonersRift.hpp
include/Game/Match/: MapDef.hpp  SpawnPoint.hpp
include/Game/Navigation/: Path.hpp
include/Game/NetworkAdapters/: EventPacketConverter.hpp
include/Game/Packets/: EntityOwnershipPacket.hpp  EntityStatePacket.hpp  SpawnPacket.hpp
include/Game/Placeholder/: PlaceholderMapDef.hpp
include/Game/Structs/: AbilityID.hpp  CharacterID.hpp
include/Game/Worlds/: ClientWorld.hpp  ServerWorld.hpp
include/GameClient/: ClientWorld.hpp  GameClient.hpp
include/GameClient/Camera/: Camera.hpp  CameraController.hpp
include/GameClient/Duplication/: DuplicationSystem.hpp
include/GameClient/Net/: GameArgsHandler.hpp  ServerConnectionManager.hpp
include/GameClient/Packets/: ClientAuthenticationPacket.hpp  GameArgsPacket.hpp
include/Input/: IInputListener.hpp  InputEventTypes.hpp  InputManager.hpp
include/Input/Listeners/: ArrowKeyMoveListener.hpp  ExitListener.hpp
include/Networking/: NetworkConstants.hpp  PacketFlag.hpp  PacketManager.hpp  PeerData.hpp
include/Networking/Client/: NetClient.hpp
include/Networking/Core/: NetCommand.hpp  NetEvent.hpp  NetEventDistributor.hpp  Networker.hpp  PeerHandle.hpp
include/Networking/Message/: Message.hpp  MessageHeader.hpp  NetMessage.hpp
include/Networking/Packets/: AutoRegisterPacket.hpp  BasePacket.hpp  ClientCommandPacket.hpp  JSONPacket.hpp  PacketBase.hpp  PacketDistributor.hpp  PacketEvent.hpp  PacketFactory.hpp  PacketMetadata.hpp  PacketTypes.hpp  Packets.hpp  PlayerInputPacket.hpp  TestPacket.hpp
include/Networking/Server/: NetServer.hpp
include/Networking/Session/: PeerDirectory.hpp
include/Renderer/: Renderer.hpp  Shader.hpp
include/Server/: ClientAuthManager.hpp  ClientState.hpp  CommandHandler.hpp  GameArgs.hpp  Server.hpp  ServerWorld.hpp
include/Server/ClientServices/: AccountCharacterBiMap.hpp  ClientAuthManager.hpp  ClientState.hpp
include/Server/Initialiser/: ClientAuthManager.hpp  GameArgs.hpp
include/tests/: InputListenerTest.hpp  ServerClientTest.hpp
src/: glad.c  main.cpp
src/Assets/: GLBLoader.cpp  ResourceManager.cpp
src/Client/GameClient/: GameClient.cpp
src/Client/GameClient/Camera/: Camera.cpp  (+1 more)
src/Client/Input/: InputManager.cpp
src/Client/Renderer/: Renderer.cpp  Shader.cpp
src/Game/: Game.cpp  GameClient.cpp  main.cpp
src/Game/Maps/: SummonersRift.cpp
src/GameClient/: GameClient.cpp
src/GameClient/Camera/: Camera.cpp  CameraController.cpp
src/Input/: InputManager.cpp
src/Networking/Client/: NetClient.cpp
src/Networking/Core/: Networker.cpp
src/Networking/Server/: NetServer.cpp
src/Renderer/: Renderer.cpp  Shader.cpp
src/Server/: Server.cpp  main.cpp
(+15 files in other folders)
